--- a/ProjectTakeoff/app/src/main/res/layout/article_list_item.xml
+++ b/ProjectTakeoff/app/src/main/res/layout/article_list_item.xml
@@ -38,6 +38,7 @@
                     android:layout_width="0dp"
                     android:layout_height="200dp"
                     android:scaleType="centerCrop"
+                    app:imageUrl='@{"http://10.0.2.2/ANMP/ProjectTakeoff/images/" + article.image_url}'
                     app:layout_constraintEnd_toEndOf="parent"
                     app:layout_constraintStart_toStartOf="parent"
                     app:layout_constraintTop_toTopOf="parent"
